			+ The language and browser delivery limitations now have presets, which can be easily selected  (Niels, 2002-08-08)
			+ Added Geotracking, based on the IP2Country database. To enable this feature you need to buy the database
			  from IP2Country. Also added two delivery limitations called 'Country' and 'Continent' to enable the Geotracking  (Niels, 2002-08-18)

			+ Misc changes
			  - 2002-07-26:  Added daily and hosts pages for affiliates and zones (Matteo)
			  - 2002-07-28:  Added publisher name to the default name of new zones  (Niels)
			  - 2002-07-28:  Added advertiser name to the default name of new campaigns  (Niels)
			  - 2002-07-28:  Added indicator for zones without any linked banners  (Niels)
			  - 2002-07-29:  Added source filtering to all history pages  (Niels)
			  - 2002-07-29:  Added expand all / collapse all buttons to banner overview page (Niels)
			  - 2002-07-30:  Added phpAds_dbmsname variable to store the db backend name for easier porting  (Matteo)
			  - 2002-08-01:  The limit when using the more compact way to link banners to zones in now configurable  (Niels)
			  - 2002-08-15:  During the login, passwords are transmitted as md5 digests, instead of plain text  (Niels)
			  - 2002-08-18:  Split the new 'Browser' delivery limitation into 'Browser' and 'OS'  (Niels)
			  - 2002-08-18:  Reinstated the old 'Browser' delivery limitation which is now called 'Useragent'  (Niels)
			  - 2002-08-31:  Added option to force browsers to use SSL when using the admin interface  (Niels)
			  - 2002-09-02:  Added seperate pruning of the database for the userlog  (Niels)
			  - 2002-09-07:  Added delay and exit-console support to pop-ups  (Niels)
			  - 2002-09-08:  Added support for different types of Geotracking databases  (Niels)
			  - 2002-09-09:  Added support for the GeoIP geotracking database  (Vitaliy Fuks)
			  - 2002-09-10:  Added support for appending a popup or interstitial zone to a plain bannerzone  (Matteo)